consolidate recipient api
